// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SectionDivider/> goldens — blue > with eyebrow > blue with-eyebrow manifest 1`] = `
{
  "artifacts": [
    {
      "identifier": "sanity-mark-black-on-blue",
      "resolvedAt": "2026-05-04T00:00:00.000Z",
      "resolvedUrl": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-black-on-blue.png",
      "type": "logo",
    },
  ],
  "deckId": null,
  "generatedAt": "2026-05-04T15:00:00.000Z",
  "generatedBy": "react-pptx",
  "manifestVersion": "1",
  "slots": {},
  "templateName": "sanity",
}
`;

exports[`<SectionDivider/> goldens — blue > with eyebrow > blue with-eyebrow ops 1`] = `
[
  {
    "insertAt": 0,
    "slideId": "slide_1",
    "type": "createSlide",
  },
  {
    "rect": {
      "h": 6858000,
      "w": 12192000,
      "x": 0,
      "y": 0,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_2",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_2",
    "properties": {
      "fillColor": "#027fff",
    },
    "type": "updateShapeProperties",
  },
  {
    "rect": {
      "h": 228600,
      "w": 5334000,
      "x": 304800,
      "y": 317500,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_3",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_3",
    "text": "PART 03",
    "type": "insertText",
  },
  {
    "objectId": "shape_3",
    "range": {
      "end": 7,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#0b0b0b",
    },
    "type": "updateTextStyle",
  },
  {
    "rect": {
      "h": 1905000,
      "w": 9906000,
      "x": 304800,
      "y": 736600,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_4",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_4",
    "text": "Structure",
    "type": "insertText",
  },
  {
    "objectId": "shape_4",
    "range": {
      "end": 9,
      "start": 0,
    },
    "style": {
      "fontFamily": "Arial",
      "fontSize": 60,
      "foregroundColor": "#0b0b0b",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_4",
    "range": {
      "end": 9,
      "start": 0,
    },
    "style": {
      "lineSpacing": 1.05,
    },
    "type": "updateParagraphStyle",
  },
  {
    "altText": "Sanity mark",
    "imageId": "image_5",
    "rect": {
      "h": 347472,
      "w": 426720,
      "x": 304800,
      "y": 6209411,
    },
    "slideId": "slide_1",
    "type": "createImage",
    "url": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-black-on-blue.png",
  },
  {
    "rect": {
      "h": 203200,
      "w": 1397000,
      "x": 10490200,
      "y": 6311900,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_6",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_6",
    "text": "SANITY INC - 2026",
    "type": "insertText",
  },
  {
    "objectId": "shape_6",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#0b0b0b",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_6",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "alignment": "END",
    },
    "type": "updateParagraphStyle",
  },
]
`;

exports[`<SectionDivider/> goldens — blue > without eyebrow > blue bare manifest 1`] = `
{
  "artifacts": [
    {
      "identifier": "sanity-mark-black-on-blue",
      "resolvedAt": "2026-05-04T00:00:00.000Z",
      "resolvedUrl": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-black-on-blue.png",
      "type": "logo",
    },
  ],
  "deckId": null,
  "generatedAt": "2026-05-04T15:00:00.000Z",
  "generatedBy": "react-pptx",
  "manifestVersion": "1",
  "slots": {},
  "templateName": "sanity",
}
`;

exports[`<SectionDivider/> goldens — blue > without eyebrow > blue bare ops 1`] = `
[
  {
    "insertAt": 0,
    "slideId": "slide_1",
    "type": "createSlide",
  },
  {
    "rect": {
      "h": 6858000,
      "w": 12192000,
      "x": 0,
      "y": 0,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_2",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_2",
    "properties": {
      "fillColor": "#027fff",
    },
    "type": "updateShapeProperties",
  },
  {
    "rect": {
      "h": 1905000,
      "w": 9906000,
      "x": 304800,
      "y": 736600,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_3",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_3",
    "text": "Structure",
    "type": "insertText",
  },
  {
    "objectId": "shape_3",
    "range": {
      "end": 9,
      "start": 0,
    },
    "style": {
      "fontFamily": "Arial",
      "fontSize": 60,
      "foregroundColor": "#0b0b0b",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_3",
    "range": {
      "end": 9,
      "start": 0,
    },
    "style": {
      "lineSpacing": 1.05,
    },
    "type": "updateParagraphStyle",
  },
  {
    "altText": "Sanity mark",
    "imageId": "image_4",
    "rect": {
      "h": 347472,
      "w": 426720,
      "x": 304800,
      "y": 6209411,
    },
    "slideId": "slide_1",
    "type": "createImage",
    "url": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-black-on-blue.png",
  },
  {
    "rect": {
      "h": 203200,
      "w": 1397000,
      "x": 10490200,
      "y": 6311900,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_5",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_5",
    "text": "SANITY INC - 2026",
    "type": "insertText",
  },
  {
    "objectId": "shape_5",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#0b0b0b",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_5",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "alignment": "END",
    },
    "type": "updateParagraphStyle",
  },
]
`;

exports[`<SectionDivider/> goldens — dot-grid > with eyebrow > dot-grid with-eyebrow manifest 1`] = `
{
  "artifacts": [
    {
      "identifier": "dot-grid-dark-900x390",
      "resolvedAt": "2026-05-04T00:00:00.000Z",
      "resolvedUrl": "data:image/svg+xml;base64,CjxzdmcgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB3aWR0aD0iOTAwIiBoZWlnaHQ9IjM5MCIgdmlld0JveD0iMCAwIDkwMCAzOTAiPgogIDxkZWZzPgogICAgPHBhdHRlcm4gaWQ9ImRvdHMiIHdpZHRoPSI3LjIiIGhlaWdodD0iNy4yIiBwYXR0ZXJuVW5pdHM9InVzZXJTcGFjZU9uVXNlIj4KICAgICAgPGNpcmNsZSBjeD0iMC41MiIgY3k9IjAuNTIiIHI9IjAuNTIiIGZpbGw9IiM3OTc5NzkiIG9wYWNpdHk9IjAuODIiIC8+CiAgICA8L3BhdHRlcm4+CiAgPC9kZWZzPgogIDxyZWN0IHdpZHRoPSI5MDAiIGhlaWdodD0iMzkwIiBmaWxsPSJ1cmwoI2RvdHMpIiAvPgo8L3N2Zz4=",
      "type": "texture",
    },
    {
      "identifier": "sanity-mark-white-on-black",
      "resolvedAt": "2026-05-04T00:00:00.000Z",
      "resolvedUrl": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-white-on-black.png",
      "type": "logo",
    },
  ],
  "deckId": null,
  "generatedAt": "2026-05-04T15:00:00.000Z",
  "generatedBy": "react-pptx",
  "manifestVersion": "1",
  "slots": {},
  "templateName": "sanity",
}
`;

exports[`<SectionDivider/> goldens — dot-grid > with eyebrow > dot-grid with-eyebrow ops 1`] = `
[
  {
    "insertAt": 0,
    "slideId": "slide_1",
    "type": "createSlide",
  },
  {
    "rect": {
      "h": 6858000,
      "w": 12192000,
      "x": 0,
      "y": 0,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_2",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_2",
    "properties": {
      "fillColor": "#0b0b0b",
    },
    "type": "updateShapeProperties",
  },
  {
    "altText": "",
    "imageId": "image_3",
    "rect": {
      "h": 4953000,
      "w": 11430000,
      "x": 304800,
      "y": 558800,
    },
    "slideId": "slide_1",
    "type": "createImage",
    "url": "data:image/svg+xml;base64,CjxzdmcgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB3aWR0aD0iOTAwIiBoZWlnaHQ9IjM5MCIgdmlld0JveD0iMCAwIDkwMCAzOTAiPgogIDxkZWZzPgogICAgPHBhdHRlcm4gaWQ9ImRvdHMiIHdpZHRoPSI3LjIiIGhlaWdodD0iNy4yIiBwYXR0ZXJuVW5pdHM9InVzZXJTcGFjZU9uVXNlIj4KICAgICAgPGNpcmNsZSBjeD0iMC41MiIgY3k9IjAuNTIiIHI9IjAuNTIiIGZpbGw9IiM3OTc5NzkiIG9wYWNpdHk9IjAuODIiIC8+CiAgICA8L3BhdHRlcm4+CiAgPC9kZWZzPgogIDxyZWN0IHdpZHRoPSI5MDAiIGhlaWdodD0iMzkwIiBmaWxsPSJ1cmwoI2RvdHMpIiAvPgo8L3N2Zz4=",
  },
  {
    "rect": {
      "h": 228600,
      "w": 5334000,
      "x": 304800,
      "y": 317500,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_4",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_4",
    "text": "PART 04",
    "type": "insertText",
  },
  {
    "objectId": "shape_4",
    "range": {
      "end": 7,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#b9b9b9",
    },
    "type": "updateTextStyle",
  },
  {
    "rect": {
      "h": 1905000,
      "w": 9906000,
      "x": 304800,
      "y": 736600,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_5",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_5",
    "text": "A quieter break",
    "type": "insertText",
  },
  {
    "objectId": "shape_5",
    "range": {
      "end": 15,
      "start": 0,
    },
    "style": {
      "fontFamily": "Arial",
      "fontSize": 60,
      "foregroundColor": "#ffffff",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_5",
    "range": {
      "end": 15,
      "start": 0,
    },
    "style": {
      "lineSpacing": 1.05,
    },
    "type": "updateParagraphStyle",
  },
  {
    "altText": "Sanity mark",
    "imageId": "image_6",
    "rect": {
      "h": 347472,
      "w": 426720,
      "x": 304800,
      "y": 6209411,
    },
    "slideId": "slide_1",
    "type": "createImage",
    "url": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-white-on-black.png",
  },
  {
    "rect": {
      "h": 203200,
      "w": 1397000,
      "x": 10490200,
      "y": 6311900,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_7",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_7",
    "text": "SANITY INC - 2026",
    "type": "insertText",
  },
  {
    "objectId": "shape_7",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#b9b9b9",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_7",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "alignment": "END",
    },
    "type": "updateParagraphStyle",
  },
]
`;

exports[`<SectionDivider/> goldens — dot-grid > without eyebrow > dot-grid bare manifest 1`] = `
{
  "artifacts": [
    {
      "identifier": "dot-grid-dark-900x390",
      "resolvedAt": "2026-05-04T00:00:00.000Z",
      "resolvedUrl": "data:image/svg+xml;base64,CjxzdmcgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB3aWR0aD0iOTAwIiBoZWlnaHQ9IjM5MCIgdmlld0JveD0iMCAwIDkwMCAzOTAiPgogIDxkZWZzPgogICAgPHBhdHRlcm4gaWQ9ImRvdHMiIHdpZHRoPSI3LjIiIGhlaWdodD0iNy4yIiBwYXR0ZXJuVW5pdHM9InVzZXJTcGFjZU9uVXNlIj4KICAgICAgPGNpcmNsZSBjeD0iMC41MiIgY3k9IjAuNTIiIHI9IjAuNTIiIGZpbGw9IiM3OTc5NzkiIG9wYWNpdHk9IjAuODIiIC8+CiAgICA8L3BhdHRlcm4+CiAgPC9kZWZzPgogIDxyZWN0IHdpZHRoPSI5MDAiIGhlaWdodD0iMzkwIiBmaWxsPSJ1cmwoI2RvdHMpIiAvPgo8L3N2Zz4=",
      "type": "texture",
    },
    {
      "identifier": "sanity-mark-white-on-black",
      "resolvedAt": "2026-05-04T00:00:00.000Z",
      "resolvedUrl": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-white-on-black.png",
      "type": "logo",
    },
  ],
  "deckId": null,
  "generatedAt": "2026-05-04T15:00:00.000Z",
  "generatedBy": "react-pptx",
  "manifestVersion": "1",
  "slots": {},
  "templateName": "sanity",
}
`;

exports[`<SectionDivider/> goldens — dot-grid > without eyebrow > dot-grid bare ops 1`] = `
[
  {
    "insertAt": 0,
    "slideId": "slide_1",
    "type": "createSlide",
  },
  {
    "rect": {
      "h": 6858000,
      "w": 12192000,
      "x": 0,
      "y": 0,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_2",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_2",
    "properties": {
      "fillColor": "#0b0b0b",
    },
    "type": "updateShapeProperties",
  },
  {
    "altText": "",
    "imageId": "image_3",
    "rect": {
      "h": 4953000,
      "w": 11430000,
      "x": 304800,
      "y": 558800,
    },
    "slideId": "slide_1",
    "type": "createImage",
    "url": "data:image/svg+xml;base64,CjxzdmcgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB3aWR0aD0iOTAwIiBoZWlnaHQ9IjM5MCIgdmlld0JveD0iMCAwIDkwMCAzOTAiPgogIDxkZWZzPgogICAgPHBhdHRlcm4gaWQ9ImRvdHMiIHdpZHRoPSI3LjIiIGhlaWdodD0iNy4yIiBwYXR0ZXJuVW5pdHM9InVzZXJTcGFjZU9uVXNlIj4KICAgICAgPGNpcmNsZSBjeD0iMC41MiIgY3k9IjAuNTIiIHI9IjAuNTIiIGZpbGw9IiM3OTc5NzkiIG9wYWNpdHk9IjAuODIiIC8+CiAgICA8L3BhdHRlcm4+CiAgPC9kZWZzPgogIDxyZWN0IHdpZHRoPSI5MDAiIGhlaWdodD0iMzkwIiBmaWxsPSJ1cmwoI2RvdHMpIiAvPgo8L3N2Zz4=",
  },
  {
    "rect": {
      "h": 1905000,
      "w": 9906000,
      "x": 304800,
      "y": 736600,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_4",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_4",
    "text": "A quieter break",
    "type": "insertText",
  },
  {
    "objectId": "shape_4",
    "range": {
      "end": 15,
      "start": 0,
    },
    "style": {
      "fontFamily": "Arial",
      "fontSize": 60,
      "foregroundColor": "#ffffff",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_4",
    "range": {
      "end": 15,
      "start": 0,
    },
    "style": {
      "lineSpacing": 1.05,
    },
    "type": "updateParagraphStyle",
  },
  {
    "altText": "Sanity mark",
    "imageId": "image_5",
    "rect": {
      "h": 347472,
      "w": 426720,
      "x": 304800,
      "y": 6209411,
    },
    "slideId": "slide_1",
    "type": "createImage",
    "url": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-white-on-black.png",
  },
  {
    "rect": {
      "h": 203200,
      "w": 1397000,
      "x": 10490200,
      "y": 6311900,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_6",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_6",
    "text": "SANITY INC - 2026",
    "type": "insertText",
  },
  {
    "objectId": "shape_6",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#b9b9b9",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_6",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "alignment": "END",
    },
    "type": "updateParagraphStyle",
  },
]
`;

exports[`<SectionDivider/> goldens — orange-red > with eyebrow > orange-red with-eyebrow manifest 1`] = `
{
  "artifacts": [
    {
      "identifier": "sanity-mark-black-on-brand",
      "resolvedAt": "2026-05-04T00:00:00.000Z",
      "resolvedUrl": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-black-on-brand.png",
      "type": "logo",
    },
  ],
  "deckId": null,
  "generatedAt": "2026-05-04T15:00:00.000Z",
  "generatedBy": "react-pptx",
  "manifestVersion": "1",
  "slots": {},
  "templateName": "sanity",
}
`;

exports[`<SectionDivider/> goldens — orange-red > with eyebrow > orange-red with-eyebrow ops 1`] = `
[
  {
    "insertAt": 0,
    "slideId": "slide_1",
    "type": "createSlide",
  },
  {
    "rect": {
      "h": 6858000,
      "w": 12192000,
      "x": 0,
      "y": 0,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_2",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_2",
    "properties": {
      "fillColor": "#ff5500",
    },
    "type": "updateShapeProperties",
  },
  {
    "rect": {
      "h": 228600,
      "w": 5334000,
      "x": 304800,
      "y": 317500,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_3",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_3",
    "text": "PART 02",
    "type": "insertText",
  },
  {
    "objectId": "shape_3",
    "range": {
      "end": 7,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#0b0b0b",
    },
    "type": "updateTextStyle",
  },
  {
    "rect": {
      "h": 1905000,
      "w": 9906000,
      "x": 304800,
      "y": 736600,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_4",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_4",
    "text": "Break some rules",
    "type": "insertText",
  },
  {
    "objectId": "shape_4",
    "range": {
      "end": 16,
      "start": 0,
    },
    "style": {
      "fontFamily": "Arial",
      "fontSize": 60,
      "foregroundColor": "#0b0b0b",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_4",
    "range": {
      "end": 16,
      "start": 0,
    },
    "style": {
      "lineSpacing": 1.05,
    },
    "type": "updateParagraphStyle",
  },
  {
    "altText": "Sanity mark",
    "imageId": "image_5",
    "rect": {
      "h": 347472,
      "w": 426720,
      "x": 304800,
      "y": 6209411,
    },
    "slideId": "slide_1",
    "type": "createImage",
    "url": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-black-on-brand.png",
  },
  {
    "rect": {
      "h": 203200,
      "w": 1397000,
      "x": 10490200,
      "y": 6311900,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_6",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_6",
    "text": "SANITY INC - 2026",
    "type": "insertText",
  },
  {
    "objectId": "shape_6",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#0b0b0b",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_6",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "alignment": "END",
    },
    "type": "updateParagraphStyle",
  },
]
`;

exports[`<SectionDivider/> goldens — orange-red > without eyebrow > orange-red bare manifest 1`] = `
{
  "artifacts": [
    {
      "identifier": "sanity-mark-black-on-brand",
      "resolvedAt": "2026-05-04T00:00:00.000Z",
      "resolvedUrl": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-black-on-brand.png",
      "type": "logo",
    },
  ],
  "deckId": null,
  "generatedAt": "2026-05-04T15:00:00.000Z",
  "generatedBy": "react-pptx",
  "manifestVersion": "1",
  "slots": {},
  "templateName": "sanity",
}
`;

exports[`<SectionDivider/> goldens — orange-red > without eyebrow > orange-red bare ops 1`] = `
[
  {
    "insertAt": 0,
    "slideId": "slide_1",
    "type": "createSlide",
  },
  {
    "rect": {
      "h": 6858000,
      "w": 12192000,
      "x": 0,
      "y": 0,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_2",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_2",
    "properties": {
      "fillColor": "#ff5500",
    },
    "type": "updateShapeProperties",
  },
  {
    "rect": {
      "h": 1905000,
      "w": 9906000,
      "x": 304800,
      "y": 736600,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_3",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_3",
    "text": "Break some rules",
    "type": "insertText",
  },
  {
    "objectId": "shape_3",
    "range": {
      "end": 16,
      "start": 0,
    },
    "style": {
      "fontFamily": "Arial",
      "fontSize": 60,
      "foregroundColor": "#0b0b0b",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_3",
    "range": {
      "end": 16,
      "start": 0,
    },
    "style": {
      "lineSpacing": 1.05,
    },
    "type": "updateParagraphStyle",
  },
  {
    "altText": "Sanity mark",
    "imageId": "image_4",
    "rect": {
      "h": 347472,
      "w": 426720,
      "x": 304800,
      "y": 6209411,
    },
    "slideId": "slide_1",
    "type": "createImage",
    "url": "/Users/rostimelk/Projects/react-gslides/packages/slides/src/sanity/assets/sanity-mark-black-on-brand.png",
  },
  {
    "rect": {
      "h": 203200,
      "w": 1397000,
      "x": 10490200,
      "y": 6311900,
    },
    "shape": "TEXT_BOX",
    "shapeId": "shape_5",
    "slideId": "slide_1",
    "type": "createShape",
  },
  {
    "objectId": "shape_5",
    "text": "SANITY INC - 2026",
    "type": "insertText",
  },
  {
    "objectId": "shape_5",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "fontFamily": "IBM Plex Mono",
      "fontSize": 10,
      "foregroundColor": "#0b0b0b",
    },
    "type": "updateTextStyle",
  },
  {
    "objectId": "shape_5",
    "range": {
      "end": 17,
      "start": 0,
    },
    "style": {
      "alignment": "END",
    },
    "type": "updateParagraphStyle",
  },
]
`;
